--- a/Files/lang/ch/chinese10.csv
+++ b/Files/lang/ch/chinese10.csv
@@ -165,6 +165,7 @@ conformity ,/n./@遵守;
 congestion ,/n./@阻塞;
 congregate ,/v./@聚集;
 congruence ,/n./@一致;,/n./@適合;,/n./@全等;
+coniferous ,/adj./@结球果的;,/adj./@针叶树的;
 conjecture ,/n./@推测;
 connection ,/n./@连接;,/n./@联系;
 conscience ,/n./@良心;
@@ -284,6 +285,7 @@ executable ,/adj./@可执行的;
 exhaustion ,/n./@枯竭;
 exhibition ,/n./@展览;
 expectancy ,/n./@期待;
+expediency ,/n./@適宜;,/n./@權宜;
 expedition ,/n./@探险;
 experience ,/n./@经历;,/n./@经验;
 experiment ,/n./@实验;
@@ -362,7 +364,7 @@ industrial ,/adj./@工业的;
 inequality ,/n./@不平等;
 inevitable ,/adj./@必然的;,/adj./@不可避免的;
 infarction ,/n./@梗塞;
-infiltrate ,/v./@渗入;,/v./@潜入;
+infiltrate ,/v./@渗入;,/v./@潜入;,/vt./@滲透;
 ingredient ,/n./@成分;
 inhabitant ,/n./@居民;
 inhibition ,/n./@抑制;
@@ -398,6 +400,7 @@ journalism ,/n./@新聞業;
 journalist ,/n./@记者;
 kidnapping ,/n./@绑架;,/n./@拐骗;
 kinematics ,/n./@运动学;
+Kyrgyzstan ,/n./@吉尔吉斯斯坦;
 laboratory ,/n./@實驗室;
 leadership ,/n./@領導;
 legitimate ,/adj./@合法的;
@@ -450,7 +453,7 @@ nomination ,/n./@提名;,/n./@任命;
 nonchalant ,/adj./@冷淡的;,/adj./@不關心的;
 obligation ,/n./@义务;
 obligatory ,/adj./@義務的;
-obliterate ,/v./@刪去;,/v./@抹掉;
+obliterate ,/v./@刪去;,/v./@抹掉;,/vt./@清除;,/vt./@摧毁;
 obtainable ,/adj./@可获得的;
 occasional ,/adj./@偶尔的;
 occidental ,/adj./@西方的;,/adj./@西洋的;
@@ -485,6 +488,7 @@ permission ,/n./@允许;,/n./@许可;
 perpetrate ,/v./@犯@罪;
 persistent ,/adj./@固执的;,/adj./@坚持的;
 persuasion ,/n./@说服;
+perversion ,/n./@歪曲;,/n./@曲解;,/n./@誤用;,/n./@濫用;,/n./@腐蝕;
 phenomenal ,/adj./@显著的;,/adj./@現象的;,/adj./@非凡的;
 phenomenon ,/n./@現象;,/n./@非凡的人;
 philosophy ,/n./@哲学;
