--- a/Files/lang/ch/chinese11.csv
+++ b/Files/lang/ch/chinese11.csv
@@ -313,6 +313,7 @@ protagonist ,/n./@主角;,/n./@主人公;,/n./@主要参与者;
 provisional ,/adj./@臨時的;
 provocative ,/adj./@挑衅的;,/adj./@煽动的;,/adj./@挑逗性的;,/adj./@撩人的;,/adj./@引起争议的;,/adj./@启发性的;
 punctuation ,/n./@標點;,/n./@標點符號;
+radiculitis ,/n./@脊神经根炎;,/n./@神经根炎;
 radioactive ,/adj./@放射性的;
 realization ,/n./@实现;
 recalibrate ,/v./@重新校準;
@@ -339,6 +340,7 @@ rudimentary ,/adj./@基本的;,/adj./@初步的;
 salvolatile ,/n./@嗅鹽;,/n./@揮發鹽;
 scholarship ,/n./@奖学金;
 sedimentary ,/adj./@沉淀的;
+selectively ,/adv./@有選擇地;,/adv./@選擇性地;
 sensational ,/adj./@轰动的;
 sensibility ,/n./@情感;
 sensitivity ,/n./@敏感性;,/n./@靈敏度;
