--- a/Files/lang/ch/chinese12.csv
+++ b/Files/lang/ch/chinese12.csv
@@ -25,6 +25,7 @@ assassinator ,/n./@刺客;
 asynchronous ,/adj./@异步的;,/adj./@不同时的;
 auscultation ,/n./@听诊;
 authenticate ,/v./@鑒定;,/v./@證明;,/vt./@證實;
+authenticity ,/n./@真实性;,/n./@可靠性;,/n./@可信賴性;
 bloodletting ,/n./@放血疗法;
 bureaucratic ,/adj./@官僚主義的;
 cancellation ,/n./@刪除;,/n./@取消;
@@ -39,6 +40,7 @@ civilization ,/n./@文明;
 cohabitation ,/n./@同居;
 colonization ,/n./@殖民;,/n./@定植;,/n./@定殖;
 commonwealth ,/n./@共和国;
+compensation ,/n./@補償;,/n./@彌補;,/n./@賠償;,/n./@賠償金;,/n./@補償金;,/n./@報酬;
 complication ,/n./@复杂;,/n./@复杂化;
 conciliatory ,/adj./@安撫的;
 condemnation ,/n./@譴責;,/n./@判決;
@@ -95,6 +97,7 @@ extravagance ,/n./@奢侈;,/n./@浪費;
 gerontocracy ,/n./@老人政治;,/n./@老人政府;
 hallucinogen ,/n./@迷幻劑;,/n./@致幻剂;
 heterosexual ,/adj./@異性的;,/adj./@異性戀的;
+hieroglyphic ,/n./@象形文字;,/adj./@象形文字的;
 housewarming ,/n./@乔迁庆宴;
 hypothetical ,/adj./@假设的;,/adj./@假言的;
 illumination ,/n./@照明;,/n./@启发;
@@ -111,6 +114,7 @@ indifference ,/n./@冷淡;,/n./@不关心;
 individually ,/adv./@个人的;
 inexplicable ,/adj./@莫名其妙的;,/adj./@无法解释的;,/adj./@無法說明的;,/adj./@難以解释的;
 infiltration ,/n./@渗透;
+inflammation ,/n./@炎症;,/n./@發炎;
 inflammatory ,/adj./@发炎的;
 infringement ,/n./@侵權;
 installation ,/n./@安裝;
