--- a/Files/lang/ch/chinese15.csv
+++ b/Files/lang/ch/chinese15.csv
@@ -1,4 +1,5 @@
 chronologically ,/adv./@按时间先后排序的;
+confidentiality ,/n./@機密;,/n./@機密性;
 democratization ,/n./@民主化;
 dichotomization ,/n./@二分;
 distinguishable ,/adj./@可辨别的;
