--- a/Files/lang/ch/chinese4.csv
+++ b/Files/lang/ch/chinese4.csv
@@ -178,6 +178,7 @@ cure ,/v.//n./@治療;,/v.//n./@矯正;
 curl ,/v./@彎曲;,/n./@捲髮;
 cute ,/adj./@可愛的;
 cyan ,/adj./@青;,/n./@青色;
+cyst ,/n./@囊胞;,/n./@囊腫;
 daft ,/adj./@癲狂的;,/adj./@蠢的;
 dale ,/n./@山谷;,/n./@峡谷;
 damn ,/v./@譴責;,/int./@該死;
@@ -303,7 +304,7 @@ find ,/v./@尋找;,/v./@发現;
 fine ,/adj./@好的;,/n.//v./@罰款;
 fire ,/n./@火;
 firm ,/adj./@堅固的;,/n./@公司;
-firn ,/n./@積雪;
+firn ,/n./@積雪;,/n./@粒雪;
 fish ,/n./@魚;,/v./@釣魚;,/v./@捕撈;
 fist ,/n./@拳頭;
 five ,/n./@五;
@@ -1047,6 +1048,7 @@ vary ,/v./@變化;,/v./@多樣化;
 vast ,/adj./@廣闊的;,/adj./@浩瀚的;
 veer ,/vi./@轉向;,/vi./@改變方向;,/vi./@改變航向;
 veil ,/n./@面紗;,/n./@面罩;,/v./@遮蔽;,/v./@掩飾;
+vein ,/n./@靜脈;,/n./@血管;,/n./@礦脈;,/n./@紋理;,/n./@格調;,/n./@脈絡;
 vend ,/v./@出售;,/v./@售賣;
 verb ,/n./@動詞;
 very ,/adv./@非常;
