--- a/Files/lang/ch/chinese5.csv
+++ b/Files/lang/ch/chinese5.csv
@@ -7,6 +7,7 @@ abort ,/v./@中斷;,/v./@流產;
 about ,/prep./@關於;,/prep./@大約;
 abuse ,/v./@濫用;,/v./@虐待;,/v./@辱罵;
 abyss ,/n./@深淵;,/n./@無底洞;,/n./@深坑;,/n./@混沌;
+acorn ,/n./@橡子;,/n./@橡實;
 acrid ,/adj./@辛辣的;
 actor ,/n./@演員;
 acute ,/adj./@尖銳的;,/adj./@精確的;,/adj./@急性的;
@@ -553,6 +554,7 @@ guide ,/v./@引導;,/v./@向导;,/n./@向导;,/n./@指南;,/v./@指导;
 guild ,/n./@行會;
 guise ,/n./@外觀;,/n./@外表;,/n./@偽裝;,/n./@形式;,/n./@外貌;,/n./@裝束;
 gulag ,/n./@集中營;
+gusty ,/adj./@陣風的;
 hairy ,/adj./@多毛的;
 halve ,/v./@減半;
 hance ,/n./@供腰;
@@ -699,6 +701,7 @@ maybe ,/adv./@也許;
 means ,/n./@方法;,/n./@手段;,/v./@意味著;
 meant ,/v./@有意;
 media ,/n./@媒體;
+medic ,/n./@衛生員;,/n./@軍醫;,/n./@醫生;,/n./@醫學生;,/n./@醫科學生;
 melee ,/n./@混戰;
 melon ,/n./@瓜;,/n./@甜瓜;
 mercy ,/n./@仁慈;
@@ -721,6 +724,7 @@ modal ,/adj./@模式的;,/adj./@情態的;,/adj./@形式的;,/adj./@形態上的
 model ,/n./@模型;,/v./@模仿;
 mogul ,/n./@大亨;,/n./@巨头;,/n./@显要人物;
 moist ,/adj./@潮濕的;
+moldy ,/adj./@發霉的;,/adj./@陳腐的;
 money ,/n./@錢;
 month ,/n./@月;
 moose ,/n./@麋;,/n./@北美麋;,/n./@驼鹿;
@@ -742,7 +746,7 @@ music ,/n./@音樂;
 musty ,/adj./@發霉的;,/adj./@落伍的;,/adj./@冷淡的;
 mutex ,/n./@互斥;,/n./@互斥體;
 naive ,/adj./@天真的;,/adj./@幼稚的;
-nasal ,/adj./@鼻的;
+nasal ,/adj./@鼻的;,/adj./@鼻音的;
 nasty ,/adj./@肮脏的;,/adj./@下流的;
 natal ,/adj./@出生的;
 naval ,/adj./@海军的;
@@ -840,7 +844,7 @@ plead ,/v./@請求;,/v./@乞求;
 pleat ,/v./@打褶;
 pluck ,/v./@拉;,/v./@拽;,/v./@扯;,/n./@勇氣;,/n./@内臟;
 plumb ,/n./@鉛錘;,/n./@垂直;,/v./@探測;,/v./@垂直;
-plume ,/n./@羽毛;
+plume ,/n./@羽毛;,/n./@羽飾;,/n./@羽狀物;,/n./@縷;
 plush ,/n./@長毛絨;,/n./@厚絨布;,/adj./@长毛绒的;,/adj./@豪華的;,/adj./@奢侈的;
 point ,/v./@指出;
 poise ,/v./@平衡;,/n./@平衡;
@@ -919,7 +923,7 @@ retch ,/v./@作嘔;
 retro ,/n./@制動;,/n./@減速;,/n./@反向;
 revel ,/v./@狂歡;,/n./@狂歡;
 rhyme ,/n./@韻;
-ridge ,/n./@山脈;
+ridge ,/n./@山脈;,/n./@山脊;,/n./@屋脊;
 rifle ,/n./@步槍;,/n./@來復槍;
 right ,/adj./@對的;,/adj./@右邊的;
 rigid ,/adj./@嚴格的;,/adj./@死板的;
@@ -950,8 +954,9 @@ salty ,/adj./@鹹的;
 samen ,/n./@精液;
 sauce ,/n./@沙司;,/n./@醬油;,/n./@调味汁;
 savor ,/n./@滋味;,/n./@氣味;,/n./@食欲;,/v./@品嘗;
+savvy ,/n./@常识;,/n./@悟性;,/adj./@精明的;,/vt./@懂;,/vt./@知曉;
 scale ,/n./@魚鱗;,/n./@規模;
-scalp ,/n./@頭皮;
+scalp ,/n./@頭皮;,/n./@帶髮頭皮;,/n./@戰利品;,/vt./@轉手倒賣;,/vt./@剝下頭皮;,/vt./@严惩;
 scape ,/n./@花莖;,/n./@觸角根;,/n./@羽軸;,/n./@柱身;
 scare ,/v./@驚嚇;
 scarf ,/n./@圍巾;
@@ -996,7 +1001,7 @@ sharp ,/adj./@鋒利的;
 shave ,/v./@剃;,/v./@刮;,/v./@修;,/v./@削;
 shear ,/v./@剪;,/v./@切割;
 sheep ,/n./@綿羊;
-sheer ,/adj./@陡峭的;
+sheer ,/adj./@陡峭的;,/adj./@全然的;,/adj./@完全的;,/adj./@純粹的;,/adj./@極薄的;
 sheet ,/n./@紙張;
 sheft ,/n./@軸;
 shelf ,/n./@架子;,/n./@櫥子;
