--- a/Files/lang/ch/chinese6.csv
+++ b/Files/lang/ch/chinese6.csv
@@ -327,7 +327,7 @@ coward ,/n./@懦夫;
 cradle ,/n./@搖籃;,/n./@发源地;
 cranky ,/adj./@暴躁的;,/adj./@古怪的;
 crappy ,/adj./@蹩脚的;,/adj./@糟糕的;
-crater ,/n./@坑;,/n./@彈坑;,/n./@火山口;
+crater ,/n./@坑;,/n./@彈坑;,/n./@火山口;,/n./@隕石坑;
 cravat ,/n./@領帶;,/n./@領巾;
 create ,/v./@創造;
 credit ,/n./@信用;,/v./@歸功于;,/v./@相信;
@@ -429,9 +429,12 @@ domine ,/n./@主人;,/n./@老爺;
 donate ,/v./@捐贈;,/v./@捐献;
 donkey ,/n./@驴;,/n./@笨蛋;
 doodle ,/v./@塗鴉;
+dorsal ,/adj./@背部的;,/adj./@背側的;
+dorsum ,/n./@背;,/n./@背部;,/n./@背面;
 dotage ,/n./@溺爱;,/n./@老耄;,/n./@老迷糊;
 double ,/adj./@兩倍的;,/adj./@雙重的;,/adj./@二倍的;
 douche ,/v./@沖洗;
+drafty ,/adj./@有穿堂風的;,/adj./@有冷風吹過的;
 dragon ,/n./@龍;
 drawer ,/n./@抽匣;
 dreary ,/adj./@沉悶的;,/adj./@沉鬱的;,/adj./@凄涼的;,/adj./@枯燥的;,/adj./@乏味的;
@@ -593,7 +596,7 @@ gamble ,/v./@賭博;
 garage ,/n./@車庫;
 garden ,/n./@花園;
 garlic ,/n./@大蒜;
-garner ,/v./@獲得;,/v./@儲存;
+garner ,/v./@獲得;,/v./@儲存;,/vt./@收藏;
 garret ,/n./@閣樓;
 gauche ,/adj./@笨拙的;,/adj./@粗魯的;
 gender ,/n./@性;
@@ -847,6 +850,7 @@ mirror ,/n./@鏡子;
 misery ,/v./@苦難;
 mishap ,/n./@厄運;
 mister ,/n./@先生;,/n./@平民;
+mitten ,/n./@連指手套;,/n./@露指手套;,/n./@拳擊手套;
 modest ,/adj./@謙虛的;,/adj./@質樸的;
 modify ,/v./@修正;,/v./@修飾;
 module ,/n./@模塊;,/n./@組件;
@@ -1040,6 +1044,7 @@ pursue ,/v./@追求;
 putrid ,/adj./@腐臭的;,/adj./@腐爛的;
 puttee ,/n./@綁腿布;,/n./@護腿布;,/n./@護腿皮;
 puzzle ,/v./@使困惑;,/n./@謎;
+pyrite ,/n./@硫化礦物;
 quadra ,/adj.//pref./@四的;
 quaint ,/adj./@古色古香的;,/adj./@老式的;,/adj./@老派的;
 quartz ,/n./@石英;
@@ -1080,6 +1085,7 @@ recipe ,/n./@食譜;,/n./@配方;,/n./@秘訣;
 recite ,/v./@背誦;,/v./@朗誦;,/v./@講述;
 recoil ,/v./@畏縮;,/v./@反沖;,/v./@後坐;,/vi./@反彈;
 record ,/n.//v./@記錄;,/v./@録制;
+redact ,/vt./@編輯;,/vt./@校訂;,/vt./@編寫;,/vt./@刪減;,/vt./@修訂;
 redeem ,/vt./@兌換;,/v./@贖回;,/v./@挽回;,/v./@履行;,/v./@補償;,/v./@恢復;
 reduce ,/v./@減少;
 refine ,/v./@完善;
@@ -1088,6 +1094,7 @@ reform ,/v./@改革;
 refuge ,/n./@庇護所;
 refund ,/n./@退款;,/n./@退還;,/n./@償還;
 refuse ,/v./@拒絕;
+refute ,/vt./@駁斥;,/vt./@反駁;,/vt./@駁倒;
 regard ,/v./@視爲;
 regent ,/n./@攝政王;,/n./@統治者;
 regime ,/n./@政體;,/n./@制度;
@@ -1158,7 +1165,7 @@ rudder ,/n./@舵;
 ruffle ,/v./@弄皺;,/v./@惹怒;,/v./@擾亂;
 rumble ,/n./@隆隆聲;,/v./@隆隆響;,/n./@咕噥;,/vi./@嘟囔;
 sacred ,/adj./@神聖的;
-saddle ,/n./@馬鞍;
+saddle ,/n./@馬鞍;,/n./@車座;,/n./@鞍狀山脊;,/n./@山鞍;,/n./@脊肉;
 safari ,/n./@旅行;,/n./@狩獵;,/n./@遠征;
 safety ,/n./@安全;
 salary ,/n./@薪水;,/vt./@加薪;
@@ -1240,6 +1247,7 @@ singer ,/n./@歌手;
 single ,/adj./@單;
 sinner ,/n./@罪犯;
 sister ,/n./@姐妹;
+sizzle ,/vi./@發嘶嘶聲;,/n./@嘶嘶聲;
 sketch ,/n./@速寫;,/n./@素描;,/n./@草圖;
 skewed ,/adj./@歪的;
 skinny ,/adj./@機密的;
