--- a/Files/lang/ch/chinese7.csv
+++ b/Files/lang/ch/chinese7.csv
@@ -55,6 +55,7 @@ anarchy ,/n./@無政府;,/n./@混亂;,/n./@無秩序;
 anatomy ,/n./@解剖學;
 ancient ,/adj./@古代的;
 android ,/n./@機器人;
+angelic ,/adj./@天使般的;,/adj./@天使的;,/adj./@似天使的;,/adj./@純潔的;,/adj./@純真的;
 angular ,/adj./@角狀的;
 animate ,/adj./@活的;
 anomaly ,/n./@異常;,/n./@反常;
@@ -81,6 +82,7 @@ arsenal ,/n./@軍械庫;,/n./@兵工廠;,/n./@武器储备;,/n./@武器庫;
 article ,/n./@文章;
 artisan ,/n./@工匠;,/n./@技工;
 ascetic ,/adj./@苦行的;
+ascribe ,/vt./@歸因於;,/vt./@歸屬於;
 aseptic ,/adj./@消毒的;
 asexual ,/adj./@無性的;,/adj./@無性繁殖的;
 ashamed ,/adj./@羞愧的;,/adj./@害臊的;
@@ -140,7 +142,7 @@ bizarre ,/adj./@奇異的;
 bladder ,/n./@膀胱;
 blanket ,/n./@地毯;
 blatant ,/adj./@明显的;,/adj./@公然的;,/adj./@露骨的;
-blemish ,/n./@瑕疵;
+blemish ,/n./@瑕疵;,/n./@汙點;,/vt./@玷汙;
 blended ,/adj./@混合的;
 blister ,/n./@水泡;
 blondie ,/n./@金髮碧眼的人;
@@ -410,6 +412,7 @@ display ,/v./@顯示;
 dispose ,/v./@處理;
 dispute ,/v./@爭論;
 disrupt ,/v./@破壞;
+dissect ,/vt./@解剖;,/vt./@剖析;,/vt./@分析;
 dissent ,/n./@異議;,/n./@不信國教;
 distant ,/adj./@遙遠的;
 distort ,/v./@扭曲;,/vt./@歪曲;,/vt./@曲解;,/vt./@篡改;
@@ -607,6 +610,7 @@ harmony ,/n./@和諧;
 harness ,/v./@治理;,/v./@利用;,/n./@馬具;
 harvest ,/v.//n./@收割;,/v.//n./@收獲;
 hashtag ,/n./@標簽;
+hastily ,/adv./@匆忙地;,/adv./@倉促地;,/adv./@草率地;
 hauteur ,/n./@傲慢;
 healthy ,/adj./@健康的;
 hearken ,/v./@傾聽;
@@ -643,6 +647,7 @@ impeach ,/v./@彈劾;,/v.//n./@控告;,/v.//n./@檢舉;,/v.//n./@懷疑;
 impetus ,/n./@动力;,/n./@推动力;,/n./@促进;,/n./@推动;
 implore ,/v./@哀求;,/v./@懇求;
 impress ,/v./@銘記;
+imprint ,/n./@印痕;,/vt./@壓印;,/vt./@蓋章;,/vt./@銘刻;
 improve ,/v./@改善;
 impulse ,/n./@衝動;,/n./@脈衝;
 incisor ,/n./@門牙;,/n./@前齒;
@@ -858,6 +863,7 @@ oxidize ,/vt./@氧化;
 pacific ,/adj./@和平的;
 package ,/n./@包裹;,/n./@包;
 paladin ,/n./@騎士;,/n./@遊俠;
+palpate ,/vt./@觸診;
 pancake ,/n./@薄烤餅;
 panther ,/n./@豹;,/n./@美洲豹;
 papyrus ,/n./@紙莎草;
@@ -897,6 +903,7 @@ perplex ,/vt./@困惑;
 persist ,/v./@堅持;,/v./@固執;
 pertain ,/vi./@屬於;,/vi./@關於;,/vi./@適合;
 perturb ,/vt./@煩擾;
+pervade ,/vt./@彌漫於;
 pervert ,/v./@濫用;,/n./@變態;,/v./@腐蝕;,/v./@歪曲;
 petrify ,/vt./@吓呆;,/vt./@石化;,/vi./@石化;
 phantom ,/n./@幽靈;,/n./@幻影;
@@ -939,7 +946,7 @@ pottery ,/n./@瓷器;
 poultry ,/n./@家禽;
 poverty ,/n./@貧窮;,/n./@缺乏;
 prairie ,/n./@大草原;
-precede ,/v./@在前;
+precede ,/v./@在前;,/vt./@先於;,/vt./@高於;
 precept ,/n./@准则;,/n./@格言;
 precise ,/adj./@精確;
 predial ,/adj./@土地的;,/adj./@农业的;,/n./@农奴;
@@ -1006,7 +1013,7 @@ quicken ,/v./@加快;
 quickly ,/adv./@快速地;,/adv./@快;
 radiant ,/adj./@發光的;
 radiate ,/v./@輻射;,/v./@放射;,/v./@發光;
-radical ,/adj./@激進的;,/adj./@根本的;
+radical ,/adj./@激進的;,/adj./@根本的;,/adj./@極端的;
 raffish ,/adj./@卑鄙的;,/adj./@無賴的;
 railway ,/n./@鐵路;
 raiment ,/n./@衣服;
@@ -1029,6 +1036,7 @@ recruit ,/n./@招聘;
 rectify ,/v./@糾正;,/v./@改正;
 recycle ,/v./@再循環;,/v./@囘收;,/v./@再利用;
 redress ,/v./@糾正;,/v./@救濟;,/v./@賠償;,/n./@糾正;,/n./@救濟;,/n./@賠償;
+reentry ,/n./@再進入;,/n./@重返;
 referee ,/n./@裁判員;,/v./@仲裁;,/v./@調停;,/n./@調解人;
 reflect ,/v./@反射;
 refrain ,/v./@抑制;,/v./@節制;
@@ -1088,6 +1096,7 @@ scarlet ,/adj./@鮮紅的;,/adj./@猩紅的;,/n./@鮮紅;
 scatter ,/v./@分散;,/v./@散播;,/v./@撒播;,/v./@散佈;
 sceptre ,/n./@權杖;,/n./@王權;,/v./@授予王權;
 scholar ,/n./@學者;
+sciatic ,/adj./@髋部的;,/adj./@坐骨的;,/adj./@坐骨神經的;
 science ,/n./@科學;
 scissor ,/n./@剪刀;,/v./@剪;
 scooter ,/n./@滑板車;,/n./@小型摩托車;,/n./@踏板車;
@@ -1192,6 +1201,7 @@ stylish ,/adj./@時髦的;
 subject ,/n./@主題;
 subside ,/v./@平息;,/v./@減弱;,/v./@沉澱;,/v./@坐下;
 subsidy ,/n./@補貼;
+subvert ,/vt./@颠覆;,/vt./@推翻;,/vt./@破壞;
 succeed ,/v./@成功;
 success ,/n./@成功;
 succumb ,/vi./@屈服;,/vi./@被壓垮;
@@ -1224,7 +1234,7 @@ tactful ,/adj./@機智的;,/adj./@老練的;
 tactile ,/adj./@觸覺的;
 tadpole ,/n./@蝌蚪;
 tantrum ,/n./@發怒;
-tarnish ,/v./@玷污;,/n./@污點;
+tarnish ,/v./@玷污;,/n./@污點;,/vt./@敗壞;
 teacher ,/n./@教師;
 tedious ,/adj./@乏味的;,/adj./@煩悶的;
 teenage ,/adj./@青少年的;
