--- a/Files/lang/ch/chinese8.csv
+++ b/Files/lang/ch/chinese8.csv
@@ -67,7 +67,7 @@ anterior ,/adj./@前面的;
 antidote ,/n./@解毒劑;,/n./@解藥;
 anything ,/pron./@任何事;
 aperitif ,/n./@开胃酒;
-aperture ,/n./@孔;,/n./@穴;
+aperture ,/n./@孔;,/n./@隙縫;,/n./@孔徑;,/n./@光圈;,/n./@孔洞;
 aphorism ,/n./@格言;
 apostasy ,/n./@變節;,/n./@背叛;
 appalled ,/adj./@惊骇的;
@@ -261,15 +261,18 @@ criminal ,/n./@罪犯;
 criteria ,/n./@標準;,/n./@條件;
 critical ,/adj./@批评的;,/adj./@批判的;
 crockery ,/n./@陶器;,/n./@瓷器;
+crucible ,/n./@坩堝;,/n./@嚴峻考驗;
 crucifix ,/n./@十字架;
 cucumber ,/n./@黄瓜;
 culinary ,/adj./@烹饪的;
+culpable ,/adj./@有罪的;,/adj./@应受责备的;
 cupboard ,/n./@碗櫥;
 curation ,/n./@摘選;
 currency ,/n./@通货;,/n./@通行;
 customer ,/n./@用户;
 cylinder ,/n./@圆筒;,/n./@汽缸;,/n./@圆柱;
 cynicism ,/n./@玩世不恭;,/n./@憤世嫉俗;,/n./@犬儒主義;,/n./@冷嘲熱諷;
+Cyrillic ,/adj./@西里尔字母的;,/n./@西里尔字母;
 daffodil ,/n./@黃水仙花;
 darkness ,/n./@黑暗;
 database ,/n./@数据库;
@@ -504,6 +507,7 @@ gracious ,/adj./@亲切的;,/adj./@高尚的;
 gradient ,/n./@斜坡;,/n./@坡度;,/n./@斜率;,/n./@梯度;
 graduate ,/v./@毕业;
 graffiti ,/n./@塗鴉;
+granular ,/adj./@粒狀的;,/adj./@颗粒的;,/adj./@粗糙的;,/adj./@顆粒性的;
 grapheme ,/n./@字素;,/n./@字母;,/n./@字位;
 grateful ,/adj./@感激的;
 greatest ,/adj./@最伟大的;
@@ -817,6 +821,7 @@ pentagon ,/n./@五边形;,/n./@五角形;
 penumbra ,/n./@半阴影;,/n./@半影;
 perceive ,/v./@察觉;,/v./@理解;,/v./@領悟;,/v./@感知;,/v./@意识到;
 periodic ,/adj./@周期的;
+permeate ,/vt./@彌漫;
 personal ,/adj./@个人的;
 persuade ,/v./@说服;
 perverse ,/adj./@不当的;,/adj./@有悖的;,/adj./@违反常理的;,/adj./@乖戾的;,/adj./@倔强的;,/adj./@堕落的;
@@ -1104,6 +1109,7 @@ treasure ,/n./@财宝;
 treasury ,/n./@金库;
 trespass ,/v./@擅闖;,/v./@侵入;,/v./@冒犯;,/v./@打擾;,/vi./@犯罪;,/n./@罪過;,/n./@非法侵入;
 triangle ,/n./@三角形;,/n./@三角;
+tribunal ,/n./@法庭;,/n./@仲裁机构;,/n./@公斷;,/n./@法官席;
 trillion ,/n./@万亿;
 truncate ,/v./@截斷;,/v./@縮短;,/adj./@截斷的;
 tutorial ,/adj./@輔導的;,/adj./@指導的;
@@ -1131,6 +1137,7 @@ variance ,/n./@分歧;,/n./@不和;,/n./@不一致;,/n./@衝突;
 vehement ,/adj./@激烈的;
 velocity ,/n./@速度;
 venerate ,/vt./@崇敬;,/vt./@敬重;
+veracity ,/n./@真實;,/n./@誠實;,/n./@真實性;
 verbatim ,/adj./@逐字的;,/adv./@逐字地;
 vertical ,/adj./@垂直的;,/adj./@竖的;
 vibrancy ,/n./@震動;,/n./@活力;
