--- a/Files/lang/ch/chinese9.csv
+++ b/Files/lang/ch/chinese9.csv
@@ -139,6 +139,7 @@ candidacy ,/n./@候選資格;,/n./@候選狀態;,/n./@候補資格;
 canonical ,/adj./@權威的;,/adj./@規範的;,/adj./@標準的;,/adj./@典型的;
 capillary ,/n./@毛细管;
 captivate ,/v./@迷住;
+careerist ,/n./@野心家;,/n./@事业狂;
 carefully ,/adv./@小心地;
 carpenter ,/n./@木匠;
 carpentry ,/n./@木匠活;
@@ -181,6 +182,7 @@ colleague ,/n./@同事;
 collision ,/v./@冲突;,/v./@抵触;,/v./@碰撞;
 collocate ,/n./@布置;
 commingle ,/v./@充分混合;
+commissar ,/n./@政治委员;,/n./@人民委员;
 committee ,/n./@委員會;
 commodity ,/n./@商品;
 commotion ,/n./@騷亂;
@@ -233,7 +235,7 @@ cultivate ,/v./@培养;
 curiosity ,/n./@好奇心;,/n./@好奇;
 currently ,/adv./@目前;
 curricula ,/n./@課程;
-customary ,/adj./@習慣的;,/adj./@通常的;
+customary ,/adj./@習慣的;,/adj./@通常的;,/adj./@慣常的;,/adj./@合乎習俗的;
 customise ,/v./@定制;,/v./@个性化;
 customize ,/v./@定制;
 dangerous ,/adj./@危险的;
@@ -278,6 +280,7 @@ developer ,/n./@开发者;
 dexterity ,/n./@灵巧;,/n./@机敏;,/n./@敏捷;
 diagnosis ,/n./@診斷;
 diagramma ,/n./@图解;
+diaphragm ,/n./@快門;,/n./@光圈;,/n./@膈膜;,/n./@橫膈膜;
 dichotomy ,/n./@二分;,/n./@二分法;,/n./@分裂;,/n./@双歧;
 dictation ,/n./@口授;,/n./@聽寫;
 different ,/adj./@不同的;
@@ -310,6 +313,7 @@ divergent ,/adj./@有分歧的;,/adj./@不同的;
 diversion ,/n./@转移;,/n./@消遣;
 diversity ,/n./@多样化;,/n./@多元;
 dormitory ,/n./@宿舍;
+dosimeter ,/n./@放射量測定器;,/n./@劑量計;
 dragonfly ,/n./@蜻蜓;
 duplicate ,/v./@复制;
 dysentery ,/n./@痢疾;
@@ -331,6 +335,7 @@ elsewhere ,/adv./@在别处;
 elucidate ,/v./@闡明;
 emanation ,/n./@散发;,/n./@喷发;,/n./@表現;,/n./@顯示;
 embarrass ,/v./使@尴尬;
+embellish ,/vt./@美化;,/vt./@裝飾;,/vt./@潤色;
 embroider ,/v./@刺綉;,/v./@裝飾;,/v./@鑲邊;,/vi./@綉花;
 emergence ,/n./@出现;
 emergency ,/n./@紧急情况;
@@ -615,7 +620,7 @@ objection ,/n./@反对;
 objective ,/adj./@客观的;
 oblivious ,/adj./@健忘的;,/adj./@忘卻的;
 obnoxious ,/adj./@可憎的;
-obscurity ,/n./@晦涩;,/n./@默默无闻;
+obscurity ,/n./@晦涩;,/n./@默默无闻;,/n./@難解;,/n./@隱匿;,/n./@卑微;
 obsession ,/n./@迷戀;,/n./@沉迷;,/n./@癡迷;
 obstinacy ,/n./@固執;
 obstinate ,/adj./@頑固的;,/adj./@固執的;
@@ -648,6 +653,7 @@ pantomime ,/n./@啞劇;,/n./@圣诞童话剧;
 parabolic ,/adj./@抛物线的;
 parachute ,/n./@降落傘;
 paragraph ,/n./@段落;,/n./@節;
+paramedic ,/n./@醫務護理人員;,/n./@醫務輔助人員;
 parameter ,/n./@參數;,/n./@參量;
 paramount ,/adj./@首要的;,/adj./@至高無上的;
 parchment ,/n./@羊皮紙;
@@ -701,7 +707,7 @@ posterior ,/adj./@後面的;
 posterity ,/n./@後代;,/n./@後世;,/n./@後裔;
 potential ,/n./@潜力;
 practical ,/adj./@實際的;
-pragmatic ,/adj./@實際的;,/adj./@實用主義的;
+pragmatic ,/adj./@實際的;,/adj./@實用主義的;,/adj./@務實的;,/adj./@實幹的;
 precedent ,/adj./@前面的;,/n./@先例;
 preceding ,/adj./@在前的;
 precipice ,/n./@悬崖;,/n./@险境;
@@ -738,7 +744,7 @@ proximity ,/n./@親近;,/n./@接近;,/n./@鄰近;
 pubescent ,/adj./@青春期的;,/adj./@有軟毛的;
 pulmonary ,/adj./@肺的;
 pulsation ,/n./@脈動;,/v./@搏動;,/v./@悸動;,/v./@振動;
-pulverize ,/vt./@弄碎;,/vt./@击败;
+pulverize ,/vt./@弄碎;,/vt./@击败;,/vt./@粉碎;,/vt./@摧毀;
 punctuate ,/v./@加標點;,/v./@不時打斷;
 pupillary ,/adj./@瞳孔的;,/adj./@学生的;,/adj./@被监护人的;
 purgatory ,/n./@炼狱;,/n./@折磨;
@@ -748,6 +754,7 @@ quarterly ,/n./@季刊;
 quintuple ,/adj./@五倍的;
 quotation ,/n./@引用;
 radiation ,/n./@輻射;,/n./@放射;
+radicular ,/adj./@神經根性的;,/adj./@神經根部的;
 radiogram ,/n./@無線電報;,/n./@收音電唱機;
 rasterize ,/vt./@光柵化;,/vt./@像素化;
 rationale ,/n./@根本原因;,/n./@逻辑依据;
