--- a/Files/lang/en/english11.csv
+++ b/Files/lang/en/english11.csv
@@ -313,6 +313,7 @@ protagonist
 provisional
 provocative
 punctuation
+radiculitis
 radioactive
 realization
 recalibrate
@@ -339,6 +340,7 @@ rudimentary
 salvolatile
 scholarship
 sedimentary
+selectively
 sensational
 sensibility
 sensitivity
