--- a/Files/lang/en/english12.csv
+++ b/Files/lang/en/english12.csv
@@ -25,6 +25,7 @@ assassinator
 asynchronous
 auscultation
 authenticate
+authenticity
 bloodletting
 bureaucratic
 cancellation
@@ -39,6 +40,7 @@ civilization
 cohabitation
 colonization
 commonwealth
+compensation
 complication
 conciliatory
 condemnation
@@ -95,6 +97,7 @@ extravagance
 gerontocracy
 hallucinogen
 heterosexual
+hieroglyphic
 housewarming
 hypothetical
 illumination
@@ -111,6 +114,7 @@ indifference
 individually
 inexplicable
 infiltration
+inflammation
 inflammatory
 infringement
 installation
