--- a/Files/lang/en/english5.csv
+++ b/Files/lang/en/english5.csv
@@ -7,6 +7,7 @@ abort
 about
 abuse
 abyss
+acorn
 acrid
 actor
 acute
@@ -553,6 +554,7 @@ guide
 guild
 guise
 gulag
+gusty
 hairy
 halve
 hance
@@ -699,6 +701,7 @@ maybe
 means
 meant
 media
+medic
 melee
 melon
 mercy
@@ -721,6 +724,7 @@ modal
 model
 mogul
 moist
+moldy
 money
 month
 moose
@@ -950,6 +954,7 @@ salty
 samen
 sauce
 savor
+savvy
 scale
 scalp
 scape
