--- a/Files/lang/en/english6.csv
+++ b/Files/lang/en/english6.csv
@@ -429,9 +429,12 @@ domine
 donate
 donkey
 doodle
+dorsal
+dorsum
 dotage
 double
 douche
+drafty
 dragon
 drawer
 dreary
@@ -847,6 +850,7 @@ mirror
 misery
 mishap
 mister
+mitten
 modest
 modify
 module
@@ -1040,6 +1044,7 @@ pursue
 putrid
 puttee
 puzzle
+pyrite
 quadra
 quaint
 quartz
@@ -1080,6 +1085,7 @@ recipe
 recite
 recoil
 record
+redact
 redeem
 reduce
 refine
@@ -1088,6 +1094,7 @@ reform
 refuge
 refund
 refuse
+refute
 regard
 regent
 regime
@@ -1240,6 +1247,7 @@ singer
 single
 sinner
 sister
+sizzle
 sketch
 skewed
 skinny
