--- a/Files/lang/en/english7.csv
+++ b/Files/lang/en/english7.csv
@@ -55,6 +55,7 @@ anarchy
 anatomy
 ancient
 android
+angelic
 angular
 animate
 anomaly
@@ -81,6 +82,7 @@ arsenal
 article
 artisan
 ascetic
+ascribe
 aseptic
 asexual
 ashamed
@@ -410,6 +412,7 @@ display
 dispose
 dispute
 disrupt
+dissect
 dissent
 distant
 distort
@@ -607,6 +610,7 @@ harmony
 harness
 harvest
 hashtag
+hastily
 hauteur
 healthy
 hearken
@@ -643,6 +647,7 @@ impeach
 impetus
 implore
 impress
+imprint
 improve
 impulse
 incisor
@@ -858,6 +863,7 @@ oxidize
 pacific
 package
 paladin
+palpate
 pancake
 panther
 papyrus
@@ -897,6 +903,7 @@ perplex
 persist
 pertain
 perturb
+pervade
 pervert
 petrify
 phantom
@@ -1029,6 +1036,7 @@ recruit
 rectify
 recycle
 redress
+reentry
 referee
 reflect
 refrain
@@ -1088,6 +1096,7 @@ scarlet
 scatter
 sceptre
 scholar
+sciatic
 science
 scissor
 scooter
@@ -1192,6 +1201,7 @@ stylish
 subject
 subside
 subsidy
+subvert
 succeed
 success
 succumb
