--- a/Files/lang/en/english8.csv
+++ b/Files/lang/en/english8.csv
@@ -261,15 +261,18 @@ criminal
 criteria
 critical
 crockery
+crucible
 crucifix
 cucumber
 culinary
+culpable
 cupboard
 curation
 currency
 customer
 cylinder
 cynicism
+Cyrillic
 daffodil
 darkness
 database
@@ -504,6 +507,7 @@ gracious
 gradient
 graduate
 graffiti
+granular
 grapheme
 grateful
 greatest
@@ -817,6 +821,7 @@ pentagon
 penumbra
 perceive
 periodic
+permeate
 personal
 persuade
 perverse
@@ -1104,6 +1109,7 @@ treasure
 treasury
 trespass
 triangle
+tribunal
 trillion
 truncate
 tutorial
@@ -1131,6 +1137,7 @@ variance
 vehement
 velocity
 venerate
+veracity
 verbatim
 vertical
 vibrancy
