--- a/Files/lang/en/english9.csv
+++ b/Files/lang/en/english9.csv
@@ -139,6 +139,7 @@ candidacy
 canonical
 capillary
 captivate
+careerist
 carefully
 carpenter
 carpentry
@@ -181,6 +182,7 @@ colleague
 collision
 collocate
 commingle
+commissar
 committee
 commodity
 commotion
@@ -278,6 +280,7 @@ developer
 dexterity
 diagnosis
 diagramma
+diaphragm
 dichotomy
 dictation
 different
@@ -310,6 +313,7 @@ divergent
 diversion
 diversity
 dormitory
+dosimeter
 dragonfly
 duplicate
 dysentery
@@ -331,6 +335,7 @@ elsewhere
 elucidate
 emanation
 embarrass
+embellish
 embroider
 emergence
 emergency
@@ -648,6 +653,7 @@ pantomime
 parabolic
 parachute
 paragraph
+paramedic
 parameter
 paramount
 parchment
@@ -748,6 +754,7 @@ quarterly
 quintuple
 quotation
 radiation
+radicular
 radiogram
 rasterize
 rationale
