--- a/Files/lang/en/english10.csv
+++ b/Files/lang/en/english10.csv
@@ -165,6 +165,7 @@ conformity
 congestion
 congregate
 congruence
+coniferous
 conjecture
 connection
 conscience
@@ -284,6 +285,7 @@ executable
 exhaustion
 exhibition
 expectancy
+expediency
 expedition
 experience
 experiment
@@ -398,6 +400,7 @@ journalism
 journalist
 kidnapping
 kinematics
+Kyrgyzstan
 laboratory
 leadership
 legitimate
@@ -485,6 +488,7 @@ permission
 perpetrate
 persistent
 persuasion
+perversion
 phenomenal
 phenomenon
 philosophy
